update multi-tenancy page

--- a/src/docs/5.29.x/enterprise/multi-tenancy.mdx
+++ b/src/docs/5.29.x/enterprise/multi-tenancy.mdx
@@ -40,22 +40,26 @@ npx create-webiny-project my-project
 
 ## 2) Connect Your Project with Webiny Control Panel
 
-To connect your project with Webiny Control Panel, run the following command:
+First, you will need a Webiny Control Panel account. If you don't have one, please contact us at `sales@webiny.com`.
+
+Once you have your account, connect your project by running the following command:
 
 ```shell
 yarn webiny login
 ```
 
-TODO
+From here, follow the onscreen instructions.
 
 ## 3) Create a Certificate in AWS ACM
 
 <Alert type="info" title="Please note">
 
 Configuration of a custom domain is optional. If you just want to have a multi-tenant GraphQL API,
-a custom domain is not required. If so, you can skip to [project
-deployment](#5-deploy-your-project). However, if you want to build websites for each tenant, you will have
-to setup custom domains.
+a custom domain is not required. If that's what you're looking for, you can skip to [project
+deployment](#5-deploy-your-project). 
+  
+  However, if you want to build websites for each tenant using the [Page Builder](/docs/{version}/overview/applications/page-builder), you will have
+to setup custom domains. If so, please read on.
 
 </Alert>
 
@@ -100,7 +104,7 @@ Now it's time to deploy the entire project. We need to deploy everything: `api`,
 yarn webiny deploy --env=dev
 ```
 
-## 8) Configure Custom Domains For Tenants
+## 6) Configure Custom Domains for Tenants
 
 Once your project is deployed, open your `admin` app. To configure a custom domain for the root tenant, hover over the `Root Tenant` label in the top app bar, and click it. This will open a settings dialog, where you can configure custom domains for your root tenant.
 
