wip: create release notes

--- a/src/docs/shared/release-notes/5.30.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.30.0/changelog.mdx
@@ -8,9 +8,32 @@ import { Alert } from "@/components/Alert"
 
 ## Development
 
-### Fixed  Prerendering of "Not Found" Pages ([#2516](https://github.com/webiny/webiny-js/pull/2516))
+### Pulumi Apps - Amending the Default Infrastructure (Pulumi) Code Now Works as Expected ([#2516](https://github.com/webiny/webiny-js/pull/2516))
 
+In case you missed it, with the [5.29.0](/docs/release-notes/5.29.0/changelog) release, we've introduced a brand new concept called [Pulumi Apps](/docs/release-notes/5.29.0/changelog#pulumi-infrastructure-code-replaced-with-pulumi-apps). From the changelog:
+ 
+> The main purpose of a Pulumi app is to define and encapsulate Pulumi infrastructure code, and, equally important, have it easily shipped as part of every Webiny project, while still maintaining the full ability for the developer to perform further customizations to existing resources or even introduce new ones.
+
+With this release, we've fixed a Pulumi Apps-related bug that would prevent users from amending the default infrastructure (Pulumi) code. 
+
+So, from now on, trying to do something like the following now will work as expected:
+
+```ts apps/website/webiny.application.ts
+import { createWebsiteApp } from "@webiny/serverless-cms-aws";
+
+export default createWebsiteApp({
+  pulumi: (app) => {
+    app.resources.delivery.cloudfront.config.comment(
+      "Let's update the distribution's description..."
+    );
+  }
+});
+```
 
 ### `webiny watch` Command - Redeploying Now Works Correctly ([#2538](https://github.com/webiny/webiny-js/pull/2538))
 
+With the [5.29.0](/docs/release-notes/5.29.0/changelog) release, a regression was introduced to the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command.
+ 
+Instead of redeploying the AWS Lambda function code once after a source code change has been applied, the command would redeploy it twice. 
 
+This has now been addressed.
