--- a/src/docs/5.29.x/enterprise/theme-manager.mdx
+++ b/src/docs/5.29.x/enterprise/theme-manager.mdx
@@ -3,8 +3,6 @@ title: Setup Theme Manager
 description: Learn how to configure a Theme Manager in your Webiny project
 ---
 
-import { Alert } from "@/components/Alert"
-
 <Alert type="info" title="Can I use this?">
 
 ** Webiny Enterprise or Webiny Business license is required to use this feature.**
@@ -67,7 +65,7 @@ yarn workspace website add @webiny/app-theme-manager
 
 ## 3) Import Theme Manager in the GraphQL API
 
-Open `api/cod22e/graphql/src/index.ts`, and import the Theme Manager plugin:
+Open `apps/api/graphql/src/index.ts`, and import the Theme Manager plugin:
 
 ```ts
 import themeManager from "@webiny/api-theme-manager";
@@ -85,7 +83,6 @@ Now we need to enable the Theme Manager module in the Admin app. In your `apps/a
 import React from "react";
 import { Admin } from "@webiny/app-serverless-cms";
 import { Cognito } from "@webiny/app-admin-users-cognito";
-import { TenantManager } from "@webiny/app-tenant-manager";
 + import { ThemeManager } from "@webiny/app-theme-manager";
 import "./App.scss";
 
@@ -99,7 +96,6 @@ export const App = () => {
   return (
     <Admin>
       <Cognito />
-      <TenantManager />
 +     <ThemeManager themes={themes} />
     </Admin>
   );
@@ -157,7 +153,20 @@ To create more themes, all you have to do is duplicate the existing `theme` work
 
 **3)** Add this new workspace path to the project level `package.json`, located at `<project>/package.json`:
 
-![Add the New Workspace to the Project.](./assets/theme-manager/workspaces.png)
+```diff-js <project>/package.json
+{
+    "workspaces": {
+      "packages": [
+        "apps/admin",
+        "apps/website",
+        "apps/theme",
++       "apps/theme-1",
+        "apps/api/graphql",
+        "apps/api/headlessCMS"
+      ]
+    }
+}
+```
 
 **4)** Run `yarn` to register the new workspace.
 
@@ -173,7 +182,6 @@ With this, you can now add your new theme in the Admin app, like so:
 import React from "react";
 import { Admin } from "@webiny/app-serverless-cms";
 import { Cognito } from "@webiny/app-admin-users-cognito";
-import { TenantManager } from "@webiny/app-tenant-manager";
 import { ThemeManager } from "@webiny/app-theme-manager";
 import "./App.scss";
 
@@ -194,7 +202,6 @@ export const App = () => {
   return (
     <Admin>
       <Cognito />
-      <TenantManager />
       <ThemeManager themes={themes} />
     </Admin>
   );
