fix: correct diagrams

--- a/src/docs/5.29.x/architecture/api/file-upload.mdx
+++ b/src/docs/5.29.x/architecture/api/file-upload.mdx
@@ -43,8 +43,8 @@ If you want to learn more, feel free to check out [a blog post](https://www.webi
 The flow consists of the following three steps:
 
 1. The client issues a GraphQL HTTP request which instructs the GraphQL Handler <diagram-letter>C</diagram-letter> to generate the necessary pre-signed POST data.
-2. Once the client receives the pre-signed POST data, in a new POST HTTP request, the data, and the actual file are uploaded to the S3 bucket <diagram-letter>G</diagram-letter>.
-3. Finally, another GraphQL request is issued, which instructs the GraphQL Handler <diagram-letter>C</diagram-letter> to store the file meta data. The data is stored both in Amazon DynamoDB <diagram-letter>E</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>F</diagram-letter>.
+2. Once the client receives the pre-signed POST data, in a new POST HTTP request, the data, and the actual file are uploaded to the S3 bucket <diagram-letter>H1</diagram-letter>.
+3. Finally, another GraphQL request is issued, which instructs the GraphQL Handler <diagram-letter>C</diagram-letter> to store the file meta data. The data is stored both in Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>.
 
 ## FAQ
 
