--- a/src/docs/5.29.x/architecture/api/overview.mdx
+++ b/src/docs/5.29.x/architecture/api/overview.mdx
@@ -31,7 +31,7 @@ For brevity, the diagram doesn't include network-level cloud infrastructure reso
 
 <Alert type="info">
 
-Note that the stateful resources like Amazon S3, Amazon Cognito, Amazon DynamoDB and Amazon ElasticSearch are deployed as part of the [Core] project application(../core/overview). These are still included in the diagram, just so it's more clear to the reader. 
+Note that the stateful resources like Amazon S3, Amazon Cognito, Amazon DynamoDB and Amazon ElasticSearch are deployed as part of the [Core](../core/overview) project application. These are still included in the diagram, just so it's more clear to the reader. 
 
 </Alert>
 
@@ -60,13 +60,13 @@ For storing data, the application relies on Amazon DynamoDB <diagram-letter>F</d
 
 ### 2. I18N
 
-The I18N application doesn't bring any additional cloud infrastructure resources. It just expands the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Handler <diagram-letter>C</diagram-letter> AWS Lambda function <diagram-letter>C</diagram-letter> gets affected by it.
+The I18N application doesn't bring any additional cloud infrastructure resources. It just expands the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Handler AWS Lambda function <diagram-letter>C</diagram-letter> gets affected by it.
 
 For storing data, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter>.
 
 ### 3. File Manager
 
-Besides extending the GraphQL schema located on the GraphQL Handler AWS Lambda function <diagram-letter>c</diagram-letter>, the File Manager application also introduces a couple of dedicated AWS Lambda functions. These perform various file-related tasks like uploading, downloading, and also image optimizations. It also introduces a single Amazon S3 bucket, in which the files are ultimately stored <diagram-letter>H</diagram-letter>.
+Besides extending the GraphQL schema located on the GraphQL Handler AWS Lambda function <diagram-letter>c</diagram-letter>, the File Manager application also introduces a couple of dedicated AWS Lambda functions. These perform various file-related tasks like uploading, downloading, and also image optimizations. It also introduces a single Amazon S3 bucket <diagram-letter>H</diagram-letter>, in which the files are ultimately stored.
 
 For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
 
@@ -75,19 +75,19 @@ For storing data and performing search queries, the application relies on Amazon
 
 Besides extending the GraphQL schema, the Page Builder application also introduces a couple of AWS Lambda functions that are responsible for importing and exporting of pages. 
  
-Also, via an Amazon EventBridge (part of the **Core** project application), it interacts with the prerendering service, that's deployed as part of the **Website** project application (more on this in the [Website](./../website/overview) section.
+Also, via an Amazon EventBridge (part of the **Core** project application, now shown on the diagram), it interacts with the prerendering service that's deployed as part of the **Website** project application (more on this in the [Website](./../website/overview) section.
 
 For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
 
 ### 5. Form Builder
 
-The Form Builder application doesn't bring any additional cloud infrastructure resources. It just extends the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Handler <diagram-letter>C</diagram-letter> AWS Lambda function gets affected by it.
+The Form Builder application doesn't bring any additional cloud infrastructure resources. It just extends the GraphQL schema with its own types and resolvers, so we can say only the GraphQL Handler AWS Lambda function <diagram-letter>C</diagram-letter> gets affected by it.
 
 For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
 
 ### 6. Headless CMS
 
-Besides extending the GraphQL schema located on the GraphQL Handler <diagram-letter>C</diagram-letter> AWS Lambda function, the Headless CMS application also brings an extra AWS Lambda function which is responsible for hosting the dynamic Headless CMS GraphQL API <diagram-letter>D</diagram-letter>. Note that on the diagram, it is shown "behind" the GraphQL Handler <diagram-letter>C</diagram-letter> Lambda function.
+Besides extending the GraphQL schema located on the GraphQL Handler AWS Lambda function <diagram-letter>C</diagram-letter> , the Headless CMS application also brings an extra AWS Lambda function which is responsible for hosting the dynamic Headless CMS GraphQL API <diagram-letter>D</diagram-letter>. Note that on the diagram, it is shown "behind" the GraphQL Handler <diagram-letter>C</diagram-letter> Lambda function.
 
 For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
 
