--- a/src/docs/5.29.x/architecture/introduction.mdx
+++ b/src/docs/5.29.x/architecture/introduction.mdx
@@ -42,6 +42,12 @@ At the moment, Webiny can be exclusively deployed into [Amazon Web Services (AWS
 
 Essentially, the setup you choose depends on the size of your project. For small and medium-sized projects or prototypes, we recommend users go with the Amazon DynamoDB setup. For larger and enterprise projects, we recommends the Amazon DynamoDB + Amazon ElasticSearch one.  
 
+<Alert type="info">
+
+The diagrams shown in the upcoming sections are representing the Amazon DynamoDB + Amazon ElasticSearch database setup. When it comes to the Amazon DynamoDB setup, everything stays the same, except, of course, the Amazon ElasticSearch service isn't used.  
+
+</Alert>
+
 ## Development and Production Deployment Modes
 
 Note that the **Core** and **API** project application can be deployed in two different deployment modes: **development** and **production**.
