--- a/src/docs/5.29.x/architecture/api/file-download.mdx
+++ b/src/docs/5.29.x/architecture/api/file-download.mdx
@@ -34,10 +34,10 @@ The diagram shows what happens every time a client tries to download a binary fi
 
 The flow consists of the following four steps:
 
-1. The client issues a GET `/download/{file-key}` HTTP request, which reaches the Amazon API Gateway <diagram-letter>B</diagram-letter>, which then invokes the File Manager's Download AWS Lambda function <diagram-letter>C</diagram-letter>.
-2. The Download AWS Lambda function extracts the file key from the received HTTP request, and then fetches the file from the S3 bucket <diagram-letter>C</diagram-letter>.
-3. As a base64 encoded string, the file is returned to the Amazon API Gateway, which transforms it to an actual binary, and sends it back to the Amazon CloudFront.
-4. Amazon CloudFront receives the file, caches it, and sends it back to the client.
+1. The client issues a GET `/download/{file-key}` HTTP request, which reaches the Amazon API Gateway <diagram-letter>B</diagram-letter>, which then invokes the File Manager's Download AWS Lambda function <diagram-letter>H4</diagram-letter>.
+2. The Download AWS Lambda function extracts the file key from the received HTTP request, and then fetches the file from the S3 bucket <diagram-letter>H1</diagram-letter>.
+3. As a base64 encoded string, the file is returned to the Amazon API Gateway <diagram-letter>B</diagram-letter>, which transforms it to an actual binary, and sends it back to the Amazon CloudFront <diagram-letter>A</diagram-letter>.
+4. Amazon CloudFront <diagram-letter>A</diagram-letter> receives the file, caches it, and sends it back to the client.
 
 <Alert type="info">
 
