--- a/src/docs/5.29.x/architecture/api/graphql-requests.mdx
+++ b/src/docs/5.29.x/architecture/api/graphql-requests.mdx
@@ -38,7 +38,7 @@ The flow consists of the following six steps:
 2. The request is forwarded to the Amazon API Gateway <diagram-letter>B</diagram-letter>.
 3. The Amazon API Gateway invokes the GraphQL Handler AWS Lambda function <diagram-letter>C</diagram-letter>.
 4. Depending on the issued GraphQL operation, the AWS Lambda function's code may issue one or more requests to other cloud infrastructure resources:
-    1. Amazon Cognito <diagram-letter>D</diagram-letter> to perform identity authentication
-    2. Amazon DynamoDB <diagram-letter>E</diagram-letter> or Amazon ElasticSearch Service <diagram-letter>F</diagram-letter> to perform database queries
+    1. Amazon Cognito <diagram-letter>E</diagram-letter> to perform identity authentication
+    2. Amazon DynamoDB <diagram-letter>F</diagram-letter> or Amazon ElasticSearch Service <diagram-letter>G</diagram-letter> to perform database queries
 5. Once the code execution has completed, an HTTP response is returned back to the Amazon API Gateway <diagram-letter>B</diagram-letter>.
 6. The Amazon API Gateway <diagram-letter>B</diagram-letter> forwards the request to the Amazon CloudFront <diagram-letter>A</diagram-letter>, which again forwards it back to the client.
