--- a/src/docs/5.29.x/architecture/api/file-upload.mdx
+++ b/src/docs/5.29.x/architecture/api/file-upload.mdx
@@ -22,7 +22,7 @@ For brevity, the diagram doesn't include network-level cloud infrastructure reso
 
 <Alert type="info">
 
-Note that the stateful resources like Amazon S3, Amazon Cognito, Amazon DynamoDB and Amazon ElasticSearch are deployed as part of the [Core] project application(../core/overview). These are still included in the diagram, just so it's more clear to the reader. 
+Note that the stateful resources like Amazon S3, Amazon Cognito, Amazon DynamoDB and Amazon ElasticSearch are deployed as part of the [Core](../core/overview) project application. These are still included in the diagram, just so it's more clear to the reader. 
 
 </Alert>
 
