update code title and links

--- a/src/docs/5.29.x/admin-area/new-app-tutorial/extending-entities.mdx
+++ b/src/docs/5.29.x/admin-area/new-app-tutorial/extending-entities.mdx
@@ -8,8 +8,8 @@ import { Alert } from "@/components/Alert"
 <Alert type="success" title="WHAT YOU’LL LEARN">
 
 - how to continue developing on top of the generated application code
-- in the GraphQL API, how to extend the initially created entity with new attributes
-- in the Admin Area, how to extend the initially created form with new form fields
+- GraphQL API: how to extend the initially created entity with new attributes
+- Admin Area: how to extend the initially created form with new form fields
 
 </Alert>
 
@@ -29,7 +29,7 @@ Let's see how we can add the new `isPopular` boolean attribute to the [`CarManuf
 
 Starting from the GraphQL API, let's open our [`CarManufacturer`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts#L20) entity and simply define the new attribute on it (parts of code removed for brevity):
 
-```ts api/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts
+```ts apps/api/graphql/src/plugins/scaffolds/carManufacturers/entities/CarManufacturer.ts
 (...)
 
 export default new Entity<CarManufacturerEntity>({
@@ -53,7 +53,7 @@ export default new Entity<CarManufacturerEntity>({
 
 Notice how we're passing the [`CarManufacturerEntity`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/types.ts#L6) interface upon instantiating the `Entity` class. Since the interface is essentially listing all attributes that our entity consists of, let's update it as well:
 
-```ts api/graphql/src/plugins/scaffolds/carManufacturers/types.ts
+```ts apps/api/graphql/src/plugins/scaffolds/carManufacturers/types.ts
 
 (...)
 
@@ -75,7 +75,7 @@ export interface CarManufacturerEntity {
 
 Finally, let's update our `CarManufacturer` GraphQL types in our schema, located in the [`typeDefs.ts`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/api/code/graphql/src/plugins/scaffolds/carManufacturers/typeDefs.ts) file:
 
-```ts api/graphql/src/plugins/scaffolds/carManufacturers/typeDefs.ts
+```ts apps/api/graphql/src/plugins/scaffolds/carManufacturers/typeDefs.ts
 export default /* GraphQL */ `
     type CarManufacturer {
         id: ID!
