--- a/src/docs/5.29.x/architecture/introduction.mdx
+++ b/src/docs/5.29.x/architecture/introduction.mdx
@@ -7,8 +7,8 @@ import { Alert } from '@/components/Alert'
 
 <Alert type="success" title="What you’ll learn">
 
-- what are the default project applications, included in a newly created Webiny project
-- what is the most complex project application, in terms of deployed cloud infrastructure
+- what are the default project applications included in a Webiny project
+- what is the most complex project application in terms of the deployed cloud infrastructure
 
 </Alert>
 
@@ -21,7 +21,7 @@ A Webiny project consists of four [project applications](../core-development-con
 2. **Admin** (`./apps/admin`) - your admin area
 3. **Website** (`./apps/website`) - your public website
 
-If we wanted to compare these applications by the complexity of the cloud infrastructure they deploy, we could say that **Core** and **API** are the more complex ones. This is simply because these deploy more different cloud infrastructure resources than the remaining **Admin** and **Website** project applications.
+If we wanted to compare these applications by the complexity of the cloud infrastructure, we could say that **Core** and **API** are the most complex ones. This is simply because these deploy more different cloud infrastructure resources than the remaining **Admin** and **Website** project applications.
 
 <Alert type="info">
 
