fix: comment format

--- a/src/docs/5.28.x/overview/features/framework.mdx
+++ b/src/docs/5.28.x/overview/features/framework.mdx
@@ -28,4 +28,4 @@ The framework is written in Typescript and caters to full-stack needs with Node.
 
 To make the whole experience of using the framework easier, we have built a set of scaffold templates to get you started. 
 
-// todo: add alert that links to tutorials and scaffolds
+<!-- TODO: add alert that links to tutorials and scaffolds -->
