--- a/src/docs/5.29.x/admin-area/extending/change-logo.mdx
+++ b/src/docs/5.29.x/admin-area/extending/change-logo.mdx
@@ -3,7 +3,7 @@ title: Change Logo
 description: Learn how to replace the default logo with your own.
 ---
 
-import { Alert } from "@/components/Alert";
+import { Alert } from "@/components/Alert"
 
 <Alert type="info" title="Can I Use This?">
 
