--- a/src/docs/5.29.x/admin-area/new-app-tutorial/get-started.mdx
+++ b/src/docs/5.29.x/admin-area/new-app-tutorial/get-started.mdx
@@ -3,7 +3,7 @@ title: Get Started
 description: Learn how to use the existing Extend Admin Area scaffold in order to start extending your Admin Area application in no time.
 ---
 
-import { Alert } from "@/components/Alert";
+import { Alert } from "@/components/Alert"
 
 <Alert type="success" title="WHAT YOU’LL LEARN">
 
