--- a/src/docs/5.29.x/core-development-concepts/basics/importing-plugins.mdx
+++ b/src/docs/5.29.x/core-development-concepts/basics/importing-plugins.mdx
@@ -3,7 +3,7 @@ title: Importing Plugins
 description: Learn how to add plugins to various sections of Webiny.
 ---
 
-import { Alert } from "@/components/Alert";
+import { Alert } from "@/components/Alert"
 
 <Alert type="success" title="What you'll learn">
 
