--- a/src/docs/5.29.x/core-development-concepts/extending-and-customizing/integrate-tailwindcss.mdx
+++ b/src/docs/5.29.x/core-development-concepts/extending-and-customizing/integrate-tailwindcss.mdx
@@ -3,7 +3,7 @@ title: Tailwind CSS
 description: Learn how to integrate tailwindcss in your Webiny project.
 ---
 
-import { Alert } from "@/components/Alert";
+import { Alert } from "@/components/Alert"
 
 <Alert type="success" title="What you'll learn">
 
