--- a/src/docs/5.29.x/enterprise/multi-tenancy.mdx
+++ b/src/docs/5.29.x/enterprise/multi-tenancy.mdx
@@ -3,7 +3,7 @@ title: Setup Multi-Tenancy
 description: Learn how to configure multi-tenancy in your Webiny project
 ---
 
-import { Alert } from "@/components/Alert";
+import { Alert } from "@/components/Alert"
 
 <Alert type="info" title="Can I use this?">
 
