--- a/src/docs/5.29.x/headless-cms/extending/custom-field-type.mdx
+++ b/src/docs/5.29.x/headless-cms/extending/custom-field-type.mdx
@@ -3,7 +3,7 @@ title: Create a Custom Field Type
 description: Create a Webiny Headless CMS Custom Field Plugin.
 ---
 
-import { Alert } from "@/components/Alert";
+import { Alert } from "@/components/Alert"
 
 <Alert type="success" title="What you'll learn">
 
