--- a/src/docs/5.29.x/overview/applications/admin.mdx
+++ b/src/docs/5.29.x/overview/applications/admin.mdx
@@ -3,7 +3,7 @@ title: Admin
 description: Overview of Webiny Admin app, an extensible admin interface application.
 ---
 
-import { Alert } from "@/components/Alert";
+import { Alert } from "@/components/Alert"
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
