--- a/src/docs/5.29.x/page-builder/extending/customize-an-existing-element.mdx
+++ b/src/docs/5.29.x/page-builder/extending/customize-an-existing-element.mdx
@@ -3,7 +3,7 @@ title: Customize an Existing Element
 description: How to Customize an Existing Page Builder Element
 ---
 
-import { Alert } from "@/components/Alert";
+import { Alert } from "@/components/Alert"
 
 <!-- Include this when needed (e.g. when explaining a feature that was introduced in a specific Webiny version) -->
 
