--- a/src/docs/5.29.x/page-builder/theming/introduction.mdx
+++ b/src/docs/5.29.x/page-builder/theming/introduction.mdx
@@ -3,7 +3,7 @@ title: Introduction
 description: How theming works inside Webiny Page Builder.
 ---
 
-import { Alert } from "@/components/Alert";
+import { Alert } from "@/components/Alert"
 
 <!-- Always include this section on top of the page. -->
 
